<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uws.pubpoint.MusicActivity">

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/acdc"
        android:id="@+id/button1" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_2"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/chumbawamba"
        android:id="@+id/button2" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/queen"
        android:id="@+id/button3" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_4"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/steppenwolf"
        android:id="@+id/button4" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_5"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/t_rex"
        android:id="@+id/button5" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_6"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/the_champs"
        android:id="@+id/button6" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_7"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/thin_lizzy"
        android:id="@+id/button7" />

    <Button
        android:layout_width="@dimen/music_button_width"
        android:layout_height="@dimen/music_button_height"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="5dp"
        android:text="@string/music_button_8"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorMusicButton"
        android:background="@drawable/zz_top"
        android:id="@+id/button8" />

</GridLayout>
