<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lander"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.uws.pubpoint.LanderActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pubpoint_logo600"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/landerLogo"
        android:scaleType="fitStart" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/module_name"
        android:textSize="@dimen/module_name_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:id="@+id/moduleName"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/built_by"
        android:textSize="@dimen/built_by_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/builtBy"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/moduleName"
        android:layout_marginTop="160dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_member_1"
            android:textSize="@dimen/team_name_size"
            android:textColor="@color/lander_team_name"
            android:gravity="left"
            android:id="@+id/teamName1"
            android:layout_marginBottom="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_member_2"
            android:textSize="@dimen/team_name_size"
            android:textColor="@color/lander_team_name"
            android:gravity="center"
            android:id="@+id/teamName2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_member_3"
            android:textSize="@dimen/team_name_size"
            android:textColor="@color/lander_team_name"
            android:gravity="right"
            android:id="@+id/teamName3"
            android:layout_marginBottom="60dp" />

    </LinearLayout>


</RelativeLayout>